<resources>
    <string name="app_name">FoodApp</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="take_a_slice">Take a Slice</string>
    <string name="from">from</string>
    <string name="dollarSign">$</string>
    <string name="price">15.00</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="my_favorites">My Favorites</string>
    <string name="chicago_style">Chicago Style</string>
    <string name="_28_99">$28.99</string>
    <string name="totals">Totals</string>
    <string name="discount">Discount</string>
    <string name="sub_totals">Sub Totals</string>
    <string name="order_total">Order Total</string>
    <string name="clear_all_products">Clear all products</string>
    <string name="stores">Stores</string>
    <string name="settings">Settings</string>
    <string name="logo_background">logo_background</string>
    <string name="logo_picture">logo_picture</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="sign_in_to_get_started">Sign in to get started</string>
    <string name="password">Password</string>
    <string name="forgot_password"><a href="#">Forgot Password?</a></string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="add_to_pizza">Add to pizza</string>
    <string name="choose_size">Choose size</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="checkout">Checkout</string>
</resources>