<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logoHeightBackgroundLogin"
        android:contentDescription="@string/logo_background"
        android:scaleType="centerCrop"
        android:src="@mipmap/register_pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/logoHeightBackgroundLogin"
        android:background="@color/black_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginLogo"
        android:contentDescription="@string/logo_picture"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/ivLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/largePadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogin">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/largeText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            android:text="@string/sign_in_to_get_started"
            android:textColor="@color/sign_in_color"
            android:textSize="@dimen/mediumText" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largePadding"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText"
            tools:ignore="Autofill,TextFields,UnusedAttribute" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largePadding"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/hintText"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColorLink="@color/forgot_password"
            android:textSize="@dimen/hintText" />

        <Button
            android:id="@+id/btnGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:background="@drawable/guest_button"
            android:text="@string/continue_as_guest"
            android:textColor="@color/guest_color" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:background="@drawable/guest_button"
            android:text="@string/register"
            android:textColor="@color/guest_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>