<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logoHeightBackgroundLogin"
        android:contentDescription="@string/logo_background"
        android:scaleType="centerCrop"
        android:src="@mipmap/register_pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/logoHeightBackgroundLogin"
        android:background="@color/black_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginLogo"
        android:contentDescription="@string/logo_picture"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/ivLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogin">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Create new Customer\nAccount"
            android:textColor="@color/black"
            android:textSize="@dimen/largeText"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largePadding"
            android:autofillHints="@null"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:autofillHints="@null"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText" />

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:autofillHints="@null"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email_register"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText" />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:autofillHints="@null"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password_register"
            android:inputType="textPassword"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText" />

        <EditText
            android:id="@+id/etConfirmPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumPadding"
            android:autofillHints="@null"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/hintText" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largePadding"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/hintText"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>