<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/largePadding">

    <ImageView
        android:id="@+id/ivPizza"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W, 1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelinePizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small10Margin"
        android:layout_marginLeft="@dimen/small10Margin"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/heading"
        app:layout_constraintStart_toEndOf="@id/guidelinePizza"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/description"
        android:textSize="@dimen/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvHeading"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="@dimen/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvHeading"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dollarLeft"
        android:layout_marginLeft="@dimen/dollarLeft"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/dollarSign"
        android:textColor="@color/icon_color"
        android:textSize="@dimen/heading"
        app:layout_constraintBaseline_toBaselineOf="@+id/from"
        app:layout_constraintStart_toEndOf="@id/from" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/price"
        android:textColor="@color/icon_color"
        android:textSize="@dimen/heading"
        app:layout_constraintBaseline_toBaselineOf="@id/dollar"
        app:layout_constraintStart_toEndOf="@id/dollar" />

    <ImageView
        android:id="@+id/ivMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>